add_subdirectory(xglobal)
add_subdirectory(tools)
add_subdirectory(xtuplehelper)
add_subdirectory(xatomic)

add_subdirectory(xmath)
add_subdirectory(xcoroutine)

add_subdirectory(wobject)
add_subdirectory(char_dev)
add_subdirectory(memory)
add_subdirectory(xcontainer)
add_subdirectory(designpattern)
add_subdirectory(io)
add_subdirectory(bus)
add_subdirectory(button)
add_subdirectory(xcallable)
add_subdirectory(oshelper)
add_subdirectory(taskbase)
